--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  url_launcher: ^6.2.6
+  rate_my_app: ^2.1.0
+  flutter_rating_bar: ^4.0.1
+
 
 dev_dependencies:
   flutter_test:
